syntax = "proto3";

package gateway_worker;

// Certificate management messages
message CertificateRequest {
  string domain = 1;
  string certificate_type = 2; // "real" or "temporary"
}

message CertificateResponse {
  string domain = 1;
  string certificate_pem = 2;
  string private_key_pem = 3;
  string certificate_chain_pem = 4;
  int64 expires_at = 5; // Unix timestamp
  bool is_temporary = 6;
  string certificate_id = 7;
}

message UpdateCertificateRequest {
  string domain = 1;
  string certificate_pem = 2;
  string private_key_pem = 3;
  string certificate_chain_pem = 4;
  int64 expires_at = 5;
  bool is_temporary = 6;
}

message UpdateCertificateResponse {
  bool success = 1;
  string message = 2;
  string certificate_id = 3;
}

message CertificateWatchRequest {
  string gateway_id = 1;
  repeated string domains = 2; // Empty means watch all
}

message CertificateUpdate {
  enum UpdateType {
    CREATED = 0;
    UPDATED = 1;
    DELETED = 2;
    RENEWAL_FAILED = 3;
    TEMPORARY_DEPLOYED = 4;
  }
  
  UpdateType update_type = 1;
  string domain = 2;
  CertificateResponse certificate = 3;
  string message = 4;
  int64 timestamp = 5;
}

// Certificate renewal and management
message CertificateRenewalRequest {
  string domain = 1;
  bool force_renewal = 2;
}

message CertificateRenewalResponse {
  bool success = 1;
  string message = 2;
  CertificateResponse new_certificate = 3;
}

message TemporaryCertificateRequest {
  string domain = 1;
  int32 validity_days = 2; // Max 14 days as per spec
}

message TemporaryCertificateResponse {
  bool success = 1;
  string message = 2;
  CertificateResponse temporary_certificate = 3;
}