//! Certificate Manager
//!
//! Handles certificate management tasks including ACME protocol,
//! renewal, temporary certificate generation, and distribution to Gateway instances.

use crate::{grpc_server::proto::*, CertificateConfig};
use anyhow::Result;
use std::collections::HashMap;
use tokio::sync::mpsc;
use tracing::{error, info, warn};

#[derive(Debug, Clone)]
pub struct CertificateData {
    pub domain: String,
    pub certificate_pem: String,
    pub private_key_pem: String,
    pub certificate_chain_pem: Option<String>,
    pub expires_at: i64,
    pub is_temporary: bool,
    pub certificate_id: String,
}

#[derive(Debug, Clone)]
pub struct UpdateResult {
    pub success: bool,
    pub message: String,
    pub config_version: String,
    pub validation_errors: Vec<String>,
}

/// Certificate Manager handles all certificate-related operations
pub struct CertificateManager {
    config: CertificateConfig,
    // In a real implementation, this would be replaced with proper storage
    certificates: tokio::sync::RwLock<HashMap<String, CertificateData>>,
}

impl CertificateManager {
    pub async fn new(config: &CertificateConfig) -> Result<Self> {
        info!("Initializing Certificate Manager");
        
        Ok(Self {
            config: config.clone(),
            certificates: tokio::sync::RwLock::new(HashMap::new()),
        })
    }

    pub async fn get_certificate(&self, domain: &str, cert_type: &str) -> Result<CertificateData> {
        info!("Getting certificate for domain: {}, type: {}", domain, cert_type);
        
        let certificates = self.certificates.read().await;
        
        if let Some(cert) = certificates.get(domain) {
            // Check if certificate is still valid
            let now = chrono::Utc::now().timestamp();
            if cert.expires_at > now {
                return Ok(cert.clone());
            } else {
                warn!("Certificate for domain {} has expired", domain);
            }
        }

        // If no valid certificate found, generate temporary one if requested
        if cert_type == "temporary" {
            drop(certificates);
            return self.generate_temporary_certificate(domain).await;
        }

        // TODO: Implement ACME certificate acquisition
        Err(anyhow::anyhow!("Certificate not found for domain: {}", domain))
    }

    pub async fn update_certificate(&self, request: &UpdateCertificateRequest) -> Result<String> {
        info!("Updating certificate for domain: {}", request.domain);
        
        let cert_data = CertificateData {
            domain: request.domain.clone(),
            certificate_pem: request.certificate_pem.clone(),
            private_key_pem: request.private_key_pem.clone(),
            certificate_chain_pem: Some(request.certificate_chain_pem.clone()),
            expires_at: request.expires_at,
            is_temporary: request.is_temporary,
            certificate_id: uuid::Uuid::new_v4().to_string(),
        };

        let mut certificates = self.certificates.write().await;
        certificates.insert(request.domain.clone(), cert_data.clone());
        
        info!("Certificate updated for domain: {}", request.domain);
        Ok(cert_data.certificate_id)
    }

    pub async fn watch_updates(
        &self,
        request: CertificateWatchRequest,
        tx: mpsc::Sender<Result<CertificateUpdate, tonic::Status>>,
    ) -> Result<()> {
        info!("Starting certificate watch for gateway: {}", request.gateway_id);
        
        // TODO: Implement actual certificate watching
        // For now, send a sample update
        let update = CertificateUpdate {
            update_type: certificate_update::UpdateType::Updated as i32,
            domain: "example.com".to_string(),
            certificate: None,
            message: "Certificate watch started".to_string(),
            timestamp: chrono::Utc::now().timestamp(),
        };

        if let Err(e) = tx.send(Ok(update)).await {
            error!("Failed to send certificate update: {}", e);
        }

        Ok(())
    }

    pub async fn start_renewal_background_task(&self, interval_seconds: u64) {
        info!("Starting certificate renewal background task with interval: {}s", interval_seconds);
        
        let mut interval = tokio::time::interval(tokio::time::Duration::from_secs(interval_seconds));
        
        loop {
            interval.tick().await;
            
            // TODO: Implement certificate renewal logic
            info!("Checking for certificates that need renewal");
            
            // Check each certificate for renewal
            let certificates = self.certificates.read().await;
            let now = chrono::Utc::now().timestamp();
            let renewal_threshold = now + (self.config.renewal_before_expiry_days as i64 * 24 * 3600);
            
            for (domain, cert) in certificates.iter() {
                if cert.expires_at < renewal_threshold && !cert.is_temporary {
                    info!("Certificate for domain {} needs renewal", domain);
                    // TODO: Trigger renewal process
                }
            }
        }
    }

    async fn generate_temporary_certificate(&self, domain: &str) -> Result<CertificateData> {
        info!("Generating temporary certificate for domain: {}", domain);
        
        // TODO: Implement actual temporary certificate generation
        // For now, return a mock certificate
        let cert_data = CertificateData {
            domain: domain.to_string(),
            certificate_pem: format!("-----BEGIN CERTIFICATE-----\n{}\n-----END CERTIFICATE-----", 
                                    "TEMPORARY_CERT_DATA_FOR_DOMAIN_".to_owned() + domain),
            private_key_pem: "-----BEGIN PRIVATE KEY-----\nTEMPORARY_KEY_DATA\n-----END PRIVATE KEY-----".to_string(),
            certificate_chain_pem: None,
            expires_at: chrono::Utc::now().timestamp() + (self.config.temporary_cert_validity_days as i64 * 24 * 3600),
            is_temporary: true,
            certificate_id: uuid::Uuid::new_v4().to_string(),
        };

        let mut certificates = self.certificates.write().await;
        certificates.insert(domain.to_string(), cert_data.clone());
        
        info!("Temporary certificate generated for domain: {}", domain);
        Ok(cert_data)
    }
}